force-app/main/default/objects/Expense__c/fields/IncurredBy__c.field-meta.xml
<CustomField>
    <fullName>IncurredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incurred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expense</relationshipName>
    <type>Lookup</type>
</CustomField>