force-app/main/default/objects/Expense__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Expense</relationshipLabel>
    <relationshipName>Expense</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>